@@ -11,3 +11,5 @@ public class TestCreatorPrototypeApplication {
         Application.launch(JavafxApplication.class, args);
     }
 }
+// VM Options need this I think?
+// java --module-path "C:\Program Files\Java\javafx-sdk-19\lib" --add-modules javafx.controls,javafx.fxml
